components/policies/best-practices/ban-localhost-services/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ban-localhost-services
  labels:
    app.kubernetes.io/name: ban-localhost-services
    app.kubernetes.io/component: best-practices
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["services"]
        scope:        "Namespaced"
  validations:
    - expression: object.spec.?type.orValue('ClusterIP') != 'ExternalName' || object.spec.?externalName.orValue('') != 'localhost'
      message: Services of type NodePort are forbidden
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
