components/policies/best-practices/ban-localhost-services/test/service-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Service
metadata:
  name: badservice01
spec:
  ports:
    - name: http
      nodePort: 31080
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ExternalName
  externalName: localhost
---
